<resources>
    <string name="app_name" translatable="false">Team BETA</string>
    <string name="lgn_usr_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="lgn_FP">Forgot Password</string>
    <string name="ssu_txvStartWith">Start with:</string>
    <string name="ssu_txvSignUp">Sign up with an email address</string>
    <string name="ssu_txvSignIn">You have jet a account? Sign in</string>
    <string name="next">Next</string>
    <string name="action_to_fixes">To fixes!</string>
    <string name="action_to_published">To published</string>
    <string name="action_send_message">Send Message</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="dialogAlertTitle">Caution!</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="dat_MessageAlert_ToFixes">Are you sure of send this posts to fixes?</string>
    <string name="dat_MessageAlert_ToPublished">Are you sure of send this posts to published?</string>
    <string name="dat_MessageAlert_Delete">Are you sure of delete this posts?</string>
    <string name="message_all_ok" translatable="false" />
    <string name="message_error_username_tooLong">The user name is too long</string>
    <string name="message_error_username_tooShort">The user name is too short</string>
    <string name="message_error_email_wrong">Introduce a valid email address</string>
    <string name="message_error_password_tooLong">The password introducced is too long</string>
    <string name="message_error_password_tooShort">The password introducced is too short</string>
    <string name="message_error_password_case">The password need to have one number at least</string>
    <string name="message_error_password_digit">The passsword need to have one letter at least</string>
    <string name="text_repeat_password">Repeat password</string>
    <string name="text_password">Password</string>
    <string name="text_create_account">Create account</string>
    <string name="message_error_password_match">Passwords do not match</string>
    <string name="message_error_nonexistent">Error with the password or the user name</string>
    <string name="btn_create_post">Create Post</string>
    <string name="tags_separated_by_comma">Tags, separated, by, comma</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="text_about_application">TeamBeta is a forum application for developers and testers.</string>
    <string name="business_web" translatable="false">https://jesuslx.ncatz.com</string>
    <string name="business_name" translatable="false">nCatz</string>
    <string name="business">Business:</string>
    <string name="about_us">About TeamBETA</string>
    <string name="recover_password">Recover password</string>
    <string name="recover_account">Recover account</string>
    <string name="title_user_name">User name:</string>
    <string name="title_user_password">User Password:</string>
    <string name="message_error_email_not_registered">That email is not registered</string>
    <array name="dash_post_tabs">
        <item name="bugs">@string/bugs</item>
        <item name="fixes">@string/fixes</item>
    </array>
    <array name="profile_post_tabs">
        <item name="sends">@string/sent</item>
        <item name="published">@string/published</item>
    </array>
    <array name="admin_post_tabs">
        <item name="sends">@string/sent</item>
        <item name="published">@string/published</item>
    </array>

    <string name="email_address">Email address</string>
    <string name="help_email_address">Introduce your email address associate to your account</string>
    <string name="message_error_post_wrongcreate">You must fill all the camps</string>
    <string name="pref_header_general">General</string>
    <string name="notifications">Notifications</string>
    <string name="pref_title_add_friends_to_messages">Add friends</string>
    <string name="title_activity_account_settings_">Account settings</string>
    <string name="title_activity_dash_posts_">Posts</string>
    <string name="pref_ringtone_silent">Mute</string>
    <string name="with_email">With email address</string>
    <string name="with_Gg">With Google account</string>
    <string name="with_St">With Steam account</string>
    <string name="with_Fb">With Facebook account</string>
    <string name="pref_user_summary">Name of the application\'s user</string>
    <string name="profile">Profile</string>
    <string name="forum_bugs">Forum Bugs</string>
    <string name="admins">Admins</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="reset_password">Reset password</string>
    <string name="posts_liked">Posts You\'ve Liked</string>
    <string name="language">Language</string>
    <string name="monks_help_center">TeamBETA Help Center</string>
    <string name="report_problem">Report a Problem</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_of">Log Out of</string>
    <string name="support">Support</string>
    <string name="ivProfilePicture_description">Is the user profile image</string>
    <string name="btnback_description">Is a image to set click to go back at stack</string>
    <string name="create_post">Create Post</string>
    <string name="o_separator" translatable="false">O</string>
    <string name="sign_up">Sign Up</string>
    <string name="userprofilebg_description">Background for the user profile picture</string>
    <string name="empty" translatable="false" />
    <string name="points">Puntos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">No implementado aun</string>

    <string name="send">Send</string>
    <string name="message_error_must_fill">You must fill all</string>
    <string name="conect_with_steam">Conect with Steam</string>
    <string name="conect_with_facebook">Conect with Facebook</string>
    <string name="who_you_are">Who are you?</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="error_insert">Error at insert a value</string>
    <string name="error_delete">Error at delete an entry</string>
    <string name="user_exists">This user already exists</string>
    <string name="user_error">Error with the user or password</string>
    <string name="publication_sended_title">Publication sended</string>
    <string name="publication_sended_content">Your publication is going to be supervised by an admin.</string>
    <string name="projects">Projects</string>
    <string name="auth_failed">Error at auth</string>
    <string name="email_already_exits">That email is already registred</string>
    <string name="connection_error">Error with the conexion</string>
    <string name="wrong_user_or_password">Wrong email or password</string>
    <string name="forums">Forums</string>
    <string name="users">Usuarios</string>
    <string name="add_new_f">Create new forum</string>
    <string name="search_new_f">Add forum</string>
    <string name="create_forum">Create new forum</string>
    <string name="select_forum">Select forum</string>
    <string name="admins_key">Admin\'s Key</string>
    <string name="tags">Tags</string>
    <string name="logo">Logo</string>
    <string name="forums_name">Forum\'s name</string>
    <string name="users_key">User\'s key</string>
    <string name="error_upload_img">Error at upload image</string>
    <string name="loading">Loading...</string>
    <string name="forums_name_exists">That forum\'s name allready exists.</string>
    <string name="search">Search</string>
    <string name="own">My Forums</string>
    <string name="must_select_photo">You must select a photo</string>
    <string name="empty_list">That list is empty</string>
    <string name="search_forum">Find a forum</string>
    <string name="access_like_user">Access like User</string>
    <string name="access_like_admin">Access like Admin</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="access">Access</string>
    <string name="access_like_msg">You are about to become a member of this forum as % s, you just need to enter the correct password:</string>
    <string name="internal_error">Internal error</string>
    <string name="action_settings">Settings</string>
    <string name="fill_all">Fill all pls</string>
    <string name="name">Name</string>
    <string name="connecting">Connecting…</string>
    <string name="leave_forum">Leave forum</string>
    <string name="see_owner">See owner</string>
    <string name="explore">Explore</string>
    <string name="news">News</string>
    <string name="no_internet">Internet no available</string>
    <string name="no_email_app">There are no email clients installed.</string>
    <string name="send_email">Send mail…</string>
    <string name="chats">Chats</string>
    <string name="partaker">Partaker</string>
    <string name="forum_web">Web</string>
    <string name="comments">Comments</string>
    <string name="published">Published</string>
    <string name="revision">On revision</string>
    <string name="fixed">Fixed</string>
    <string name="sent">Sent</string>
    <string name="edit_forum">Edit forum</string>
    <string name="enter_pass_to_continue">Enter your password to continue</string>
    <string name="wrong_password">Wrong password</string>
    <string name="forum">Forum</string>
    <string name="text_new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="bugs">Bugs</string>
    <string name="fixes">Fixes</string>
    <string name="email_sent">Email sent to</string>
    <string name="wring_key">Wrong key, sorry</string>
    <string name="still_no_chats">There are still no chats</string>
    <string name="change_password">Change password</string>
    <string name="email_subject">Using TeamBeta</string>
    <string name="problem_report">Poblem Report</string>
    <string name="version">Version 1.1.1</string>
    <string name="dev">Developer JesusLX</string>
    <string name="licenses">Licenses:</string>
    <string name="third_party_libraries">Third-party libraries</string>
    <string name="upload_error">Upload error</string>

</resources>
