<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_action_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/action_chats"
            android:title="@string/chats"
            android:icon="@drawable/ic_action_chat" />
        <item
            android:id="@+id/action_projects"
            android:icon="@drawable/ic_action_forums"
            android:title="@string/projects" />
        <item
            android:id="@+id/action_bugs"
            android:icon="@drawable/ic_action_bug"
            android:title="@string/forum_bugs" />
        <item
            android:id="@+id/action_admins"
            android:icon="@drawable/ic_action_admin"
            android:title="@string/admins" />
    </group>
    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_action_help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>