<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_profile"
            android:checked="true"
            android:title="@string/profile" />
        <item
            android:id="@+id/item_bugs"
            android:title="@string/forum_bugs" />
        <item
            android:id="@+id/item_admin"
            android:title="@string/admins" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/item_settings"
            android:checked="true"
            android:title="@string/settings" />
        <item
            android:id="@+id/item_help"
            android:title="@string/help" />

    </group>
</menu>