<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_action_user"/>
        <item android:id="@+id/action_bugs"
            android:title="@string/forum_bugs"
            android:icon="@drawable/ic_action_bug"/>
        <item android:id="@+id/action_blank"
            android:title="@string/empty"/>
    </group>
    <item android:id="@+id/navigation_subheader"
        android:title="@string/settings">
        <menu>
            <item android:id="@+id/action_settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_action_settings"/>
            <item android:id="@+id/action_help"
                android:title="@string/help"
                android:icon="@drawable/ic_action_help"/>
        </menu>
    </item>

</menu>