<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_me"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.limox.jesus.teambeta.Fragments.AboutMe.AboutMe_Fragment">

    <TextView
        android:id="@+id/am_txvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textSize="@dimen/fav_titleSize" />

    <View
        android:id="@+id/am_vwSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/am_txvTitle"
        android:background="@color/colorSeparator"/>

    <TextView
        android:id="@+id/am_txvSubTitleBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_vwSeparator"
        android:paddingStart="@dimen/fav_margin"
        android:paddingEnd="@dimen/fav_margin"
        android:paddingTop="@dimen/fav_margin"
        android:text="@string/business"
        android:textSize="@dimen/fav_titleSize" />

    <TextView
        android:id="@+id/am_txvBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_txvSubTitleBusiness"
        android:paddingStart="@dimen/fav_marginx2"
        android:paddingEnd="@dimen/fav_margin"
        android:paddingTop="@dimen/fav_margin"
        android:text="@string/business_name" />

    <TextView
        android:id="@+id/am_txvWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_txvBusiness"
        android:paddingStart="@dimen/fav_marginx2"
        android:paddingEnd="@dimen/fav_margin"
        android:paddingTop="@dimen/fav_margin"
        android:text="@string/business_web" />

    <TextView
        android:id="@+id/am_txvSubTitleApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_txvWeb"
        android:paddingStart="@dimen/fav_margin"
        android:paddingEnd="@dimen/fav_margin"
        android:paddingTop="@dimen/fav_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/fav_titleSize" />

    <TextView
        android:id="@+id/am_txvAboutApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_txvSubTitleApplication"
        android:paddingStart="@dimen/fav_marginx2"
        android:paddingEnd="@dimen/fav_margin"
        android:paddingTop="@dimen/fav_margin"
        android:text="@string/text_about_application" />
</RelativeLayout>
