<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    tools:context="com.limox.jesus.teambeta.Fragments.SignUp.SignUpEmail_Fragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fav_margin"
        android:text="@string/who_you_are"
        android:textSize="@dimen/fav_titleSize"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/title"
        android:layout_toStartOf="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:background="@color/toolbarColorBg" />

    <EditText
        android:id="@+id/sue_edtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_action_mail"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/fontColor"
        android:textSize="@dimen/fav_titleSize" />


    <Button
        android:id="@+id/sue_btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/toolbarColorBg"
        android:layout_centerVertical="true"
        android:text="@string/next" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/sue_txvSignIn"
        android:background="@color/colorSeparator" />

    <TextView
        android:id="@+id/sue_txvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/lgn_pddingTop"
        android:text="@string/ssu_txvSignIn"
        android:textAlignment="center"
        android:textColor="@color/fontColor" />


</RelativeLayout>
