<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_create_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme"
    tools:context="com.limox.jesus.teambeta.Fragments.CreatePost.CreatePost_Fragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/acp_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/create_post"
        android:background="@color/toolbarColorBg"
        >

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/acp_toolbar"
        android:background="@color/lgn_background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/crp_EdtPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLength="60"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/crp_EdtPostDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crp_EdtPostTitle"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/crp_EdtPostTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:drawableStart="@drawable/ic_loyalty_black_24px"
            android:hint="@string/tags_separated_by_comma"
            android:maxLength="255"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />



    </RelativeLayout>
</RelativeLayout>
