<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:theme="@style/AppTheme.NoActionBar"
    tools:context="com.limox.jesus.teambeta.Fragments.SignUp.SignUpUser_Fragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fav_margin"
        android:text="@string/tell_us_about_you"
        android:textSize="@dimen/fav_titleSize"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignEnd="@+id/title"
        android:layout_below="@+id/title"
        android:layout_toStartOf="@+id/title"
        android:background="@color/toolbarColorBg" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/suu_tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/suu_edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawablePadding="10dp"
            android:layout_below="@+id/imageButton2"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/suu_tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suu_tilName"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/suu_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:layout_alignStart="@+id/suu_edtName"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/suu_tilRpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suu_tilPassword"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/suu_edtRpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/suu_edtName"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/text_repeat_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/suu_btnCreate"
        android:layout_width="wrap_content"
        android:background="@color/toolbarColorBg"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@+id/suu_tilRpPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/text_create_account" />
</RelativeLayout>
