<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lgn_background"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/AppTheme"

    tools:context="com.limox.jesus.teambeta_sqlite.Fragments.SignUp.StartSignUp_Fragment">

    <TextView
        android:id="@+id/ssu_txvStartWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ssu_title"
        android:paddingStart="@dimen/marginStart"
        android:paddingTop="@dimen/lgn_pddingTop"
        android:text="@string/ssu_txvStartWith"
        android:textColor="@color/fontColor" />

    <RelativeLayout
        android:id="@+id/ssu_rlBtnsStartWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ssu_txvStartWith"
        android:gravity="center"
        android:paddingTop="@dimen/lgn_pddingTop">

        <Button
            android:id="@+id/ssu_btnFb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/facebookColor"
            android:text="@string/conect_with_facebook"
            android:drawableStart="@drawable/ic_facebook"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/ssu_btnGg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ssu_btnFb"
            android:background="@color/googleColor"
            android:text="G"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/ssu_btnStm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ssu_btnGg"
            android:background="@color/steamColor"
            android:text="@string/conect_with_steam"
            android:drawableLeft="@drawable/ic_action_write"
            android:textColor="#FFF" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ssu_rlSeparator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ssu_rlBtnsStartWith"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/lgn_pddingTop">

        <View
            android:id="@+id/ssu_vwRigthLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_toStartOf="@+id/ssu_txvMidleText"
            android:background="@color/colorSeparator" />

        <TextView
            android:id="@+id/ssu_txvMidleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="O"
            android:textColor="@color/colorSeparator" />

        <View
            android:id="@+id/ssu_vwLeftLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/ssu_txvMidleText"
            android:background="@color/colorSeparator" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ssu_txvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ssu_rlSeparator"
        android:paddingTop="@dimen/lgn_pddingTop"
        android:text="@string/ssu_txvSignUp"
        android:textAlignment="center"
        android:textColor="@color/fontColor" />


    <TextView
        android:id="@+id/ssu_txvPolitics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/lgn_pddingTop"
        android:text="I agree the terms of conditions and uses"
        android:textAlignment="center"
        android:textColor="@color/fontColor" />
</RelativeLayout>
